<resources>
    <string name="app_name">Sample Login</string>
    <string name="welcome">Welcome</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">TODO</string>
</resources>